# axum-htmx-example

./: Cargo.toml  Makefile.toml  README.md
src/: config.rs  error.rs  main.rs
src/pages/: counter.rs  html_template.rs  mod.rs
templates/: counter.html
