[package]
name = "axum-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
config = "0.13.3"
serde = { version = "1.0.167", features = ["derive", "rc"] }
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.71"
askama = "0.12.0"
tower-http = { version = "0.4.2", features = ["fs"] }
